# native-ime

./: Cargo.toml  README.md
crates/ime-core/: Cargo.toml
crates/ime-core/src/: backend.rs  engine.rs  lib.rs  types.rs
crates/ime-fcitx4/: Cargo.toml
crates/ime-fcitx4/src/: lib.rs  proxy.rs
crates/ime-fcitx5/: Cargo.toml
crates/ime-fcitx5/src/: lib.rs  proxy.rs
crates/ime-ffi/: Cargo.toml
crates/ime-ffi/src/: handle.rs  lib.rs
crates/ime-ibus/: Cargo.toml
crates/ime-ibus/src/: lib.rs  proxy.rs
crates/ime-poc/: Cargo.toml
crates/ime-poc/src/: main.rs
