[workspace]
members = [
    "crates/ime-core",
    "crates/ime-ibus",
    "crates/ime-fcitx4",
    "crates/ime-fcitx5",
    "crates/ime-ffi",
    "crates/ime-poc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ime-core = { path = "crates/ime-core" }
ime-ibus = { path = "crates/ime-ibus" }
ime-fcitx4 = { path = "crates/ime-fcitx4" }
ime-fcitx5 = { path = "crates/ime-fcitx5" }
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
crossbeam-channel = "0.5"
anyhow = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
