[package]
name = "ime-fcitx5"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fcitx5 D-Bus IME backend"

[dependencies]
ime-core.workspace = true
log.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
futures-util.workspace = true
zbus.workspace = true
