[package]
name = "ime-ibus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBus D-Bus IME backend"

[dependencies]
ime-core.workspace = true
log.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
futures-util.workspace = true
zbus.workspace = true
